# huevos_ranchero

./: .gitignore  README.md
backend/: PostgresTester.cpp
backend/OpenFace/: CMakeLists.txt  FaceLandmark.cpp  README.md
backend/VideoMagic/: README.txt  ffmpeg.cpp  ffmpeg.hpp  info.cpp  info.hpp  main.cpp
database_config/: Config.php  CreateDb.php  DATABASE_README.txt
frontend/: index.html  login.php  registration.html  registration.php
frontend/client/: README.md
frontend/client/my-app/: package-lock.json  package.json
frontend/client/my-app/public/: index.html
frontend/client/my-app/src/: App.css  App.js  Members.js  RequireLogin.js  VideoPlayback.js  VideoTable.js  index.css  index.js
frontend/client/my-app/src/containers/: AppProvider.js  store.js
frontend/client/my-app/src/css/: App.css  Members.css  VideoPlayback.css
frontend/client/my-app/src/reducers/: user.js
frontend/client/playback/playbacksimple/my-app/: package-lock.json  package.json
frontend/client/playback/playbacksimple/my-app/src/: App.js
frontend/client/playback/playbackwithtools/my-app/: package-lock.json
frontend/client/playback/playbackwithtools/my-app/src/demo/: App.js
frontend/server/: README.md  createDB.bat  huevos_ranchero.sql  test.pgsql  test.tar  uservideos.sql
frontend/server/pg-api/: package-lock.json  package.json  server.js
frontend/server/pg-api/upload/: FaceDrawer  runScripts  vm
